# CREsted

./: .codecov.yaml  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  all_ct_bigwigAverageOverBed.sh  bed2fasta.sh  deeppeak_tutorial.ipynb  environment.yml  filterBedChromSizes.sh  main.py  model_zoo.py  pyproject.toml  setup.py  test_plotting.ipynb
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yaml  docs_upload.yaml  pep.yaml  release.yaml  ruff.yaml  test.yaml
configs/: default.yml  update_configs.py  user.yml
deeplocus/data/: make_dataset.py
deeppeak/data/: create_targets.py  preprocess_bed.py
deeppeak/data/helpers/: bed.py  genome.py
deeppeak/evaluate/: evaluate.py  interpret.py  predict.py
deeppeak/evaluate/utils/: bed.py  data_old.py  explain.py  one_hot_encoding.py  plot.py  shap.py
deeppeak/models/: dataloader.py  train.py
deeppeak/models/deeppeak/: loss.py  model.py
deeppeak/training/: train.py
deeppeak/training/models/: deeppeak.py  zoo.py
deeppeak/training/utils/: augment.py  dataloader.py  loss.py  metrics.py
docs/: Makefile  changelog.md  conf.py  contributing.md  howtocite.md  index.md  index.rst  installation.md  license.md  make.bat  references.bib  references.md
docs/_build/doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  references.doctree
docs/_build/html/: .buildinfo  api.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/_templates/: custom-module-template.rst
docs/_templates/autosummary/: class.rst
docs/api/: datasets.md  generate_docs.rst  index.md  io.md  logging.md  plotting.md  preprocessing.md  renaming.md  tools.md  utils.md
docs/api/plotting/: bar.md  corr.md  design.md  dist.md  explain.md  heatmap.md  hist.md  index.md  locus.md  modisco.md  patterns.md  qc.md  region.md  renaming.rst  scatter.md  track.md  violin.md
docs/api/tools/: data.md  index.md  losses.md  metrics.md  modisco.md  zoo.md
docs/extensions/: typed_returns.py
docs/models/: biccn.rst  borzoi.rst  deepflybrain.rst  deephumancortex2.rst  deepliver activity.rst  deepmousebrain1.rst  deepmousebrain2.rst  deeppbmc.rst  deepzebrafish.rst  enformer.rst  index.md
docs/models/ASAP/: asap_cc.rst  asap_sn.rst  index.md
docs/models/BICCN/: borzoi_biccn.rst  deepbiccn.rst  deepbiccn2.rst  index.md  mousecortex_hydrop.rst
docs/models/Brain/: deepchickenbrain1.rst  deepchickenbrain2.rst  deephumanbrain.rst  deephumancortex1.rst  deephumancortex2.rst  deepmousebrain1.rst  deepmousebrain2.rst  deepmousebrain3.rst  index.md
docs/models/Cancer/: deepccl.rst  deepglioma.rst  deepmel1.rst  deepmel2.rst  deepmel2_gabpa.rst  index.md
docs/models/DeepBrain/: deepchickenbrain1.rst  deepchickenbrain2.rst  deephumanbrain.rst  deephumancortex1.rst  deepmousebrain3.rst  index.md
docs/models/DeepLiver/: deepliver accessibility.rst  deepliver zonation.rst  index.md
docs/models/DeepMEL/: deepmel1.rst  deepmel2.rst  deepmel2_gabpa.rst  index.md
docs/models/Fly/: deepflybrain.rst  (+3 more)
docs/notebooks/: deeptopic.ipynb  example.ipynb
docs/tutorials/: borzoi_atac_finetuning.ipynb  custom_models.ipynb  index.md  index_specific_features.md  index_workflows.md  introduction.ipynb  model_database_example.ipynb  model_training_and_eval.ipynb  mouse_biccn.ipynb  multi_gpu.ipynb  topic_classification.ipynb
enhancerai/data/: create_targets.py  create_targets_deeppeak.py  create_targets_deeptopic.py  preprocess_bed.py
enhancerai/evaluate/: evaluate.ipynb  interpret.py
enhancerai/training/: train.py
notebooks/: analysis.ipynb  deeppeak_tutorial.ipynb  deeppeak_tutorial2.ipynb
scripts/: bash_generate_contributionscores_from_bed.sh  bash_run_modisco.sh  generate_contributionscores_from_bed.py  train.sh  train_sbatch.sh
scripts/model_porting/: borzoi_to_crested.py  borzoiprime_to_crested.py  enf_to_crested.py
src/: utils.py
src/crested/: __init__.py  _backend.py  _conf.py  _datasets.py  _genome.py  _io.py  _logging.py
src/data/: create_inputs.py  create_targets.py  preprocess.py  preprocess_bed.py  train_val_test_split.py
src/enhancerai/: __init__.py  _io.py
src/models/: augment.py  dataloader.py  load_model.py  main_short.py  test.py  train.py  train_model.py
tests/: __init__.py  _utils.py  conftest.py  test_data.py  test_dataloader.py  test_datasets.py  test_io.py  test_pipeline.py  test_pl.py  test_pl_rename.py  test_pp.py  test_refactor.py  test_tl.py  test_tl_rename.py  test_utils.py
tests/data/: test.chrom.sizes  test.regions.bed
(+233 files in other folders)
